--- a/apps.html
+++ b/apps.html
@@ -1,35 +1,17 @@
 <ul>
-  <a href="https://example.com">
-    <li><img src="https://i.ibb.co/Nn1DD4j/68d64f99521d2a57fc843c75521f7329d7ae38b3ea8c3f1a9ac6969e4a93e251-200.jpg">MT Manager</li>
-  </a>
-  <a href="https://example.com/app2">
-    <li><img src="https://i.ibb.co/sPB1WGC/images-q-tbn-ANd9-Gc-Sy-Ex-CDf-Vl-DUbar-SQs2-Jwyvp-JW0-Ezvn-GWLmfo-Ja-Nta0w-s.png " alt="App 2 Icon">APK Editor Pro</li>
-  </a>
-  <a href="https://example.com/app3">
-    <li><img src="https://i.ibb.co/ZJvWMyX/3-XLsd-Bx-Tg-Ss9z-FHFk-Xlk-Ti-FY-z-Yp5-FDs-Ke-Bgvz-Oka-Tn-Nlo-FID8-Cp-a-POX3-H3seg.png " alt="App 3 Icon">Dev Tools Pro</li>
-  </a>
-  <a href="https://example.com/app3">
-    <li><img src="https://i.ibb.co/qrh1My7/bixfy.jpg" alt="App 3 Icon">NP Manager</li>
-  </a>
-    <a href="https://example.com/app3">
-    <li><img src="https://i.ibb.co/LdW8Q8K/bixfy.jpg" alt="App 3 Icon">Apktool M</li>
-  </a>
-      <a href="https://example.com">
-    <li><img src="https://i.ibb.co/0cj856L/bixfy.jpg" alt="App 3 Icon">App Cloner</li>
-  </a>
-     <a href="https://example.com">
-    <li><img src="https://i.ibb.co/XFrd5GK/bixfy.jpg" alt="App 3 Icon">Modder Hub</li>
-  </a>
-       <a href="https://example.com">
-    <li><img src="https://i.ibb.co/84Lg1Yp/bixfy.jpg" alt="App 3 Icon">Sketchware Pro</li>
-  </a>
-       <a href="https://example.com">
-    <li><img src="https://i.ibb.co/XY6tfmB/bixfy.jpg" alt="App 3 Icon">Aide Pro</li>
-  </a>
-      <a href="https://example.com">
-    <li><img src="https://i.ibb.co/bH8kKXZ/bixfy.jpg" alt="App 3 Icon">Termux</li>
-  </a>
-       <a href="https://example.com">
-    <li><img src="https://i.ibb.co/LtwjFBt/bixfy.jpg" alt="App 3 Icon">Botx Dialog</li>
-  </a>
+ _*🌀Шєєвs ☻ƒƒι¢ιαl Sтσяє🌀*_
+   
+_*STOCK AVAILABLE*_                       
+_*100% Legit (Without Login)*_
+
+    *86  💎 -  125 Rs*
+  *172  💎 -  250 Rs*
+  *257  💎 -  360 Rs*
+  *344  💎 -  490 Rs*
+  *429  💎 -  600 Rs*
+  *514  💎 -  720 Rs*
+  *706  💎 -  980 Rs*
+*1050  💎 -  1440 Rs*
+*1412  💎 -  1920 Rs*
+*2195  💎 -  2760 Rs*
 </ul>
