--- a/apps.html
+++ b/apps.html
@@ -1,17 +1,14 @@
 <ul>
- _*🌀Шєєвs ☻ƒƒι¢ιαl Sтσяє🌀*_
-   
-_*STOCK AVAILABLE*_                       
-_*100% Legit (Without Login)*_
-
-    *86  💎 -  125 Rs*
-  *172  💎 -  250 Rs*
-  *257  💎 -  360 Rs*
-  *344  💎 -  490 Rs*
-  *429  💎 -  600 Rs*
-  *514  💎 -  720 Rs*
-  *706  💎 -  980 Rs*
-*1050  💎 -  1440 Rs*
-*1412  💎 -  1920 Rs*
-*2195  💎 -  2760 Rs*
+ <p><strong>Without Login Pack ( Via Id & Server)!</strong></p>
+ 
+ <li>86   💎 -  125 Rs</li>
+ <li>172  💎 -  250 Rs</li>
+ <li>257  💎 -  360 Rs</li>
+ <li>344  💎 -  490 Rs</li>
+ <li>429  💎 -  600 Rs</li>
+ <li>514  💎 -  720 Rs</li>
+ <li>706  💎 -  980 Rs</li>
+ <li>1050 💎 -  1440 Rs</li>
+ <li>1412 💎 -  1920 Rs</li>
+ <li>2195 💎 -  2760 Rs</li>
 </ul>
