--- a/apps.html
+++ b/apps.html
@@ -11,4 +11,18 @@
  <li>1050 💎 -  1440 Rs</li>
  <li>1412 💎 -  1920 Rs</li>
  <li>2195 💎 -  2760 Rs</li>
-</ul>
+
+ <b>Without Login Pack Alternate  Packs( Via Id & Server)!</b>
+
+
+ <li>112  💎 -  170 Rs</li>
+ <li>223  💎 -  325 Rs</li>
+ <li>336  💎 -  475 Rs</li>
+ <li>570  💎 -  790 Rs</li>
+ <li>1163 💎 -  1550 Rs</li>
+ <li>2398 💎 -  3150 Rs</li>
+ <li>6042 💎 -  7700 Rs</li>
+    
+
+https://wa.me/+919999177742
+https://wa.me/+917208593854
