--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
 <ul>
- <h1><b>Without Login Pack ( Via Id & Server)!</b></h1>
+ <b>Without Login Pack ( Via Id & Server)!</b>
  
  <li>86   💎 -  125 Rs</li>
  <li>172  💎 -  250 Rs</li>
@@ -13,7 +13,6 @@
  <li>2195 💎 -  2760 Rs</li>
 
  <b>Without Login Pack Alternate  Packs( Via Id & Server)!</b>
-
 
  <li>112  💎 -  170 Rs</li>
  <li>223  💎 -  325 Rs</li>
