--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
 <ul>
- <b>Without Login Pack ( Via Id & Server)!</b>
+ <b align "centre">Without Login Pack ( Via Id & Server)!</b>
  
  <li>86   💎 -  125 Rs</li>
  <li>172  💎 -  250 Rs</li>
