--- a/apps.html
+++ b/apps.html
@@ -11,8 +11,10 @@
  <li>1050 💎 -  1440 Rs</li>
  <li>1412 💎 -  1920 Rs</li>
  <li>2195 💎 -  2760 Rs</li>
-
- <b>Without Login Pack Alternate  Packs( Via Id & Server)!</b>
+ 
+<p> .</p>
+ 
+ <p><b>Without Login Pack Alternate  Packs( Via Id & Server)!</p></b>
 
  <li>112  💎 -  170 Rs</li>
  <li>223  💎 -  325 Rs</li>
