--- a/apps.html
+++ b/apps.html
@@ -25,6 +25,6 @@
  <li>6042 💎 -  7700 Rs</li>
     
 
-<a href=https://wa.me/+919999177742</a>
-https://wa.me/+917208593854
+https://wa.me/+919999177742 Hokage
+https://wa.me/+917208593854 Aero 
 </ul>
