--- a/apps.html
+++ b/apps.html
@@ -25,6 +25,6 @@
  <li>6042 💎 -  7700 Rs</li>
     
 
-https://wa.me/+919999177742 Hokage
-https://wa.me/+917208593854 Aero 
+https://wa.me/+919999177742 <p>Hokage</p>
+https://wa.me/+917208593854 <p></p>Aero</p> 
 </ul>
