--- a/apps.html
+++ b/apps.html
@@ -1,33 +1,3 @@
 <ul>
- <p><b>Without Login Pack ( Via Id & Server)!</p></b>
- 
- <li>86   💎 -  125 Rs</li>
- <li>172  💎 -  250 Rs</li>
- <li>257  💎 -  360 Rs</li>
- <li>344  💎 -  490 Rs</li>
- <li>429  💎 -  600 Rs</li>
- <li>514  💎 -  720 Rs</li>
- <li>706  💎 -  980 Rs</li>
- <li>1050 💎 -  1440 Rs</li>
- <li>1412 💎 -  1920 Rs</li>
- <li>2195 💎 -  2760 Rs</li>
- 
-<p> </p>
-<p> </p>
- 
- <p><b>Without Login Pack Alternate  Packs( Via Id & Server)!</p></b>
-
- <li>112  💎 -  170 Rs</li>
- <li>223  💎 -  325 Rs</li>
- <li>336  💎 -  475 Rs</li>
- <li>570  💎 -  790 Rs</li>
- <li>1163 💎 -  1550 Rs</li>
- <li>2398 💎 -  3150 Rs</li>
- <li>6042 💎 -  7700 Rs</li>
-    
-<p> </p>
-<p> </p>
- 
-<a>https://wa.me/+919999177742</a>
-<a>https://wa.me/+917208593854</a>
+ <h1> I Love You June </h1>
 </ul>
