--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,6 @@
 <ul>
  <ul>
-## <p><b>Without Login Pack ( Via Id & Server)!</p></b>
+<p><b>Without Login Pack ( Via Id & Server)!</p></b>
  
  <li>86   💎 -  125 Rs</li>
  <li>172  💎 -  250 Rs</li>
@@ -12,11 +12,9 @@
  <li>1050 💎 -  1440 Rs</li>
  <li>1412 💎 -  1920 Rs</li>
  <li>2195 💎 -  2760 Rs</li>
+
  
-<p> </p>
-<p> </p>
- 
-## <p><b>Without Login Pack Alternate  Packs( Via Id & Server)!</p></b>
+<p><b>Without Login Pack Alternate  Packs( Via Id & Server)!</p></b>
 
  <li>112  💎 -  170 Rs</li>
  <li>223  💎 -  325 Rs</li>
@@ -25,12 +23,9 @@
  <li>1163 💎 -  1550 Rs</li>
  <li>2398 💎 -  3150 Rs</li>
  <li>6042 💎 -  7700 Rs</li>
-    
-<p> </p>
-<p> </p>
  
-<a>https://wa.me/+919999177742</a>
-<a>https://wa.me/+917208593854</a>
+<a href=https://wa.me/+919999177742</a>
+<a href=https://wa.me/+917208593854</a>
 </ul>
 
 </ul>
