--- a/apps.html
+++ b/apps.html
@@ -24,8 +24,8 @@
  <li>2398 💎 -  3150 Rs</li>
  <li>6042 💎 -  7700 Rs</li>
  
-<a href=https://wa.me/+919999177742</a>
-<a href=https://wa.me/+917208593854</a>
+<a href="https://wa.me/+919999177742"</a>
+<a href="https://wa.me/+917208593854"</a>
 </ul>
 
 </ul>
