--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
 <ul>
-<p><b>Without Login Pack ( Via Id & Server)!</p></b>
+<p><b><u>Without Login Pack ( Via Id & Server)!</p></b></u>
  
  <li>86&#128142;    -  125 Rs</li>
  <li>172&#128142;   -  250 Rs</li>
