--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
 <ul>
-<p><b><u>Without Login Pack ( Via Id & Server)!</p></b></u>
+<p><b><u>Without Login Pack (Via Id & Server)!</p></b></u>
  
  <li>86&#128142;    -  125 Rs</li>
  <li>172&#128142;   -  250 Rs</li>
@@ -13,7 +13,7 @@
  <li>2195&#128142;  -  2760 Rs</li>
 
  
-<p><b>Without Login Pack Alternate  Packs( Via Id & Server)!</p></b>
+<p><b><u>Without Login Pack Alternate  Packs!(Via Id & Server)!</p></b></u>
 
  <li>112&#128142;   -  170 Rs</li>
  <li>223&#128142;   -  325 Rs</li>
@@ -22,6 +22,29 @@
  <li>1163&#128142;  -  1550 Rs</li>
  <li>2398&#128142;  -  3150 Rs</li>
  <li>6042&#128142;  -  7700 Rs</li>
+
+
+ <p><b><u>Via Login Pack (Require Moonton/Facebook/VK)!</p></b></u>
+
+ <li>165&#128142;   -  230 Rs</li>
+ <li>275&#128142;   -  390 Rs</li>
+ <li>275&#128142;   -  400 Rs {180&#128302;}</li>
+ <li>330&#128142;   -  480 Rs</li>
+ <li>440&#128142;   -  600 Rs</li>
+ <li>495&#128142;   -  690 Rs</li>
+ <li>565&#128142;   -  750 Rs</li>
+ <li>730&#128142;   -  950 Rs</li>
+ <li>840&#128142;   -   1050 Rs</li>
+ <li>1155&#128142;   -  1450 Rs</li>
+ <li>1765&#128142;   -  2200 Rs</li>
+ <li>2975&#128142;   -  3500 Rs</li>
+ <li>6000&#128142;   -  6800 Rs</li>
+
+
+Note -
+_•Coa Can Be Done Once In a Month (Crystal Of Aurora)._
+_•Processing time 30 Minutes for first time recharge._
+_•Will Be Instant If Already Played._
  
 https://wa.me/+919999177742
 https://wa.me/+917208593854
