--- a/apps.html
+++ b/apps.html
@@ -28,9 +28,9 @@
 
  <li>165&#128142;   -  230 Rs</li>
  <li>275&#128142;   -  390 Rs</li>
- <li>275&#128142;   -  400 Rs {180&#128302;}</li>
- <li>330&#128142;   -  480 Rs</li>
- <li>440&#128142;   -  600 Rs</li>
+ <li>275&#128142;   -  400 Rs{180&#128302; Crystal Of Aurora}</li>
+ <li>330&#128142;   -  480 Rs{200&#128302; Crystal Of Aurora}</li>
+ <li>440&#128142;   -  600 Rs{180&#128302; Crystal Of Aurora}</li>
  <li>495&#128142;   -  690 Rs</li>
  <li>565&#128142;   -  750 Rs</li>
  <li>730&#128142;   -  950 Rs</li>
@@ -41,10 +41,10 @@
  <li>6000&#128142;   -  6800 Rs</li>
 
 
-Note -
-_•Coa Can Be Done Once In a Month (Crystal Of Aurora)._
-_•Processing time 30 Minutes for first time recharge._
-_•Will Be Instant If Already Played._
+<p><b>Note :-</p></b>
+Crystal Of Aurora Can Be Done Once In a Month
+Processing time 30 Minutes for first time recharge
+Will Be Instant If Already Played
  
 https://wa.me/+919999177742
 https://wa.me/+917208593854
