--- a/apps.html
+++ b/apps.html
@@ -42,9 +42,14 @@
 
 
 <p><b>Note :-</p></b>
-Crystal Of Aurora Can Be Done Once In a Month
-Processing time 30 Minutes for first time recharge
-Will Be Instant If Already Played
+ <ol>
+  <li>Crystal Of Aurora Can Be Done Once In a Month</li>
+  <li>Processing time 30 Minutes for first time recharge</li>
+  <li>Will Be Instant If Already Played</li>
+</ol>  
+
+
+
  
 https://wa.me/+919999177742
 https://wa.me/+917208593854
