--- a/apps.html
+++ b/apps.html
@@ -42,7 +42,7 @@
 
 
 <p><b>Note :-</p></b>
- <li>Crystal Of Aurora Can Be Done Once In a Month</li>
+ <li>Crystal Of Aurora Can Be Done Once In a Month</li><li>Processing time 30 Minutes for first time recharge</li>
  <li>Processing time 30 Minutes for first time recharge</li>
  <li>Will Be Instant If Already Played</li>
 
