--- a/apps.html
+++ b/apps.html
@@ -42,14 +42,14 @@
 
 
 <p><b>Note :-</p></b>
- <li>Crystal Of Aurora Can Be Done Once In a Month</li><li>Processing time 30 Minutes for first time recharge</li>
- <li>Processing time 30 Minutes for first time recharge</li>
- <li>Will Be Instant If Already Played</li>
+<li>Crystal Of Aurora Can Be Done Once In a Month</li>
+<li>Processing time 30 Minutes for first time recharge</li>
+<li>Will Be Instant If Already Played</li>
 
 
-
+<p><a href="https://wa.me/+919999177742"></a></p>
  
-https://wa.me/+919999177742
-https://wa.me/+917208593854
 
+https://wa.me/+917208593854
+ 
 </ul>
