--- a/apps.html
+++ b/apps.html
@@ -47,9 +47,9 @@
 <li>Will Be Instant If Already Played</li>
 
 
-<p><a href="https://wa.me/+919999177742"</a></p>
+<p><a href="https://wa.me/+919999177742"> To Contact Hokage</a></p>
  
 
-https://wa.me/+917208593854
+
  
 </ul>
