--- a/apps.html
+++ b/apps.html
@@ -47,7 +47,7 @@
 <li>Will Be Instant If Already Played</li>
 
 
-<p><a href="https://wa.me/+919999177742"> Tap To Contact Hokage</a></p>
+<p><a href="https://wa.me/+919999177742"> +919999177742 - Tap To Contact Hokage</a></p>
  
 
 
