--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,10 @@
-<ul>
+<html>
+<body>
+
+
 <p><b><u>Without Login Pack (Via Id & Server)!</p></b></u>
  
+ <ul>
  <li>86&#128142;    -  125 Rs</li>
  <li>172&#128142;   -  250 Rs</li>
  <li>257&#128142;   -  360 Rs</li>
