--- a/apps.html
+++ b/apps.html
@@ -1,9 +1,7 @@
-<html>
-<body>
-
-
+<Head>
 <h1>Without Login Pack (Via Id & Server)!</h1>
- 
+</Head>
+
  <ul>
  <li>86&#128142;    -  125 Rs</li>
  <li>172&#128142;   -  250 Rs</li>
