--- a/apps.html
+++ b/apps.html
@@ -14,9 +14,12 @@
  <li>1412&#128142;  -  1920 Rs</li>
  <li>2195&#128142;  -  2760 Rs</li>
 </ul>
- 
-<p><b><u>Without Login Pack Alternate  Packs!(Via Id & Server)!</p></b></u>
 
+<Head>
+<h3><u>Without Login Pack Alternate  Packs!(Via Id & Server)!</h3></u>
+</Head>
+
+<ul>
  <li>112&#128142;   -  170 Rs</li>
  <li>223&#128142;   -  325 Rs</li>
  <li>336&#128142;   -  475 Rs</li>
@@ -24,7 +27,7 @@
  <li>1163&#128142;  -  1550 Rs</li>
  <li>2398&#128142;  -  3150 Rs</li>
  <li>6042&#128142;  -  7700 Rs</li>
-
+</ul>
 
  <p><b><u>Via Login Pack (Require Moonton/Facebook/VK)!</p></b></u>
 
