--- a/apps.html
+++ b/apps.html
@@ -29,8 +29,12 @@
  <li>6042&#128142;  -  7700 Rs</li>
 </ul>
 
- <p><b><u>Via Login Pack (Require Moonton/Facebook/VK)!</p></b></u>
 
+<Head>
+ <h3><u>Via Login Pack (Require Moonton/Facebook/VK)!</h3></u>
+</Head>
+
+<ul>
  <li>165&#128142;   -  230 Rs</li>
  <li>275&#128142;   -  390 Rs</li>
  <li>275&#128142;   -  400 Rs{180&#128302; Crystal Of Aurora}</li>
@@ -44,7 +48,7 @@
  <li>1765&#128142;   -  2200 Rs</li>
  <li>2975&#128142;   -  3500 Rs</li>
  <li>6000&#128142;   -  6800 Rs</li>
-
+</ul>
 
 <p><b>Note :-</p></b>
 <li>Crystal Of Aurora Can Be Done Once In a Month</li>
