--- a/apps.html
+++ b/apps.html
@@ -51,11 +51,10 @@
 </ul>
 
 <p><b>Note :-</p></b>
-<ul>
-<li>Crystal Of Aurora Can Be Done Once In a Month</li>
-<li>Processing time 30 Minutes for first time recharge</li>
-<li>Will Be Instant If Already Played</li>
-</ul>
+
+<li>Crystal Of Aurora Can Be Done Once In a Month
+Processing time 30 Minutes for first time recharge
+Will Be Instant If Already Played</li>
 
 <p><a href="https://wa.me/+919999177742"> +919999177742 - Tap To Contact Hokage</a></p>
 <p><a href="https://wa.me/+917208593854"> +917208593854 - Tap To Contact Aero</a></p>
