--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,6 @@
-<Head>
+<head>
 <h3><u>Without Login Pack (Via Id & Server)!</h3></u>
-</Head>
+</head>
 
  <ul>
  <li>86&#128142;    -  125 Rs</li>
@@ -15,9 +15,9 @@
  <li>2195&#128142;  -  2760 Rs</li>
 </ul>
 
-<Head>
+<head>
 <h3><u>Without Login Pack Alternate  Packs!(Via Id & Server)!</h3></u>
-</Head>
+</head>
 
 <ul>
  <li>112&#128142;   -  170 Rs</li>
@@ -30,9 +30,9 @@
 </ul>
 
 
-<Head>
+<head>
 <h3><u>Via Login Pack (Require Moonton/Facebook/VK)!</h3></u>
-</Head>
+</head>
 
 <ul>
  <li>165&#128142;   -  230 Rs</li>
@@ -50,9 +50,16 @@
  <li>6000&#128142;   -  6800 Rs</li>
 </ul>
 
+<head>
 <p><b>Note :-</p></b>
+</head>
 
-<li>Crystal Of Aurora Can Be Done Once In a Month
+<style>
+   .one{
+      border 3px solid black;
+   }
+</style>
+<li class="one">Crystal Of Aurora Can Be Done Once In a Month
 Processing time 30 Minutes for first time recharge
 Will Be Instant If Already Played</li>
 
