--- a/apps.html
+++ b/apps.html
@@ -54,14 +54,10 @@
 <p><b>Note :-</p></b>
 </head>
 
-<style>
-   .one{
-      border 3px solid black;
-   }
-</style>
-<li class="one">Crystal Of Aurora Can Be Done Once In a Month
+<li>Crystal Of Aurora Can Be Done Once In a Month
 Processing time 30 Minutes for first time recharge
 Will Be Instant If Already Played</li>
+
 
 <p><a href="https://wa.me/+919999177742"> +919999177742 - Tap To Contact Hokage</a></p>
 <p><a href="https://wa.me/+917208593854"> +917208593854 - Tap To Contact Aero</a></p>
