--- a/apps.html
+++ b/apps.html
@@ -51,13 +51,13 @@
 </ul>
 
 <head>
-<p><b>Note :-</p></b>
+<u><p><b>Note :-</p></b></u>
 </head>
-
+<ul>
 <li>Crystal Of Aurora Can Be Done Once In a Month
 Processing time 30 Minutes for first time recharge
 Will Be Instant If Already Played</li>
-
+</ul>
 
 <p><a href="https://wa.me/+919999177742"> +919999177742 - Tap To Contact Hokage</a></p>
 <p><a href="https://wa.me/+917208593854"> +917208593854 - Tap To Contact Aero</a></p>
