--- a/apps.html
+++ b/apps.html
@@ -59,6 +59,7 @@ Processing time 30 Minutes for first time recharge
 Will Be Instant If Already Played</li>
 </ul>
 
+<h3><u>Contact Us</h3></u>
 <p><a href="https://wa.me/+919999177742"> +919999177742 - Tap To Contact Hokage</a></p>
 <p><a href="https://wa.me/+917208593854"> +917208593854 - Tap To Contact Aero</a></p>
  
