--- a/apps.html
+++ b/apps.html
@@ -53,9 +53,11 @@
 <head>
 <u><p><b>Note :-</p></b></u>
 </head>
+
 <ul>
-<li>Crystal Of Aurora Can Be Done Once In a Month
-Processing time 30 Minutes for first time recharge
+ 
+<li>Crystal Of Aurora Can Be Done Once In a Month</li>
+Processing time 30 Minutes for first time recharge</li>
 Will Be Instant If Already Played</li>
 </ul>
 
