--- a/apps.html
+++ b/apps.html
@@ -57,8 +57,8 @@
 <ul>
  
 <li>Crystal Of Aurora Can Be Done Once In a Month</li>
-Processing time 30 Minutes for first time recharge</li>
-Will Be Instant If Already Played</li>
+<li>Processing time 30 Minutes for first time recharge</li>
+<li>Will Be Instant If Already Played</li>
 </ul>
 
 <h3><u>Contact Us</h3></u>
