--- a/apps.html
+++ b/apps.html
@@ -54,12 +54,13 @@
 <u><p><b>Note :-</p></b></u>
 </head>
 
+<head>
 <ul>
- 
-<li>Crystal Of Aurora Can Be Done Once In a Month</li>
+ <li>Crystal Of Aurora Can Be Done Once In a Month</li>
 <li>Processing time 30 Minutes for first time recharge</li>
 <li>Will Be Instant If Already Played</li>
 </ul>
+</head>
 
 <h3><u>Contact Us</h3></u>
 <p><a href="https://wa.me/+919999177742"> +919999177742 - Tap To Contact Hokage</a></p>
