--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
 
-<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.imdb.com%2Ftitle%2Ftt10233718%2F&psig=AOvVaw37FHlsBP7gxPgUz_tWwE1Q&ust=1711377674398000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCA5uSQjYUDFQAAAAAdAAAAABAE">
+<img src="https://www.deviantart.com/amaraeva/art/Duality-1023444675">
 <h3><u>Without Login Pack (Via Id & Server)!</h3></u>
 
  <ul>
