--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
 
-<img src="https://www.deviantart.com/amaraeva/art/Duality-1023444675">
+<img src="/storage/emulated/0/DCIM/Camera/IMG_20231210_184941.jpg">
 <h3><u>Without Login Pack (Via Id & Server)!</h3></u>
 
  <ul>
