--- a/apps.html
+++ b/apps.html
@@ -1,64 +1,6 @@
-
-<h3><u>Without Login Pack (Via Id & Server)!</h3></u>
-
- <ul>
- <li>86&#128142;    -  125 Rs</li>
- <li>172&#128142;   -  250 Rs</li>
- <li>257&#128142;   -  360 Rs</li>
- <li>344&#128142;   -  490 Rs</li>
- <li>429&#128142;   -  600 Rs</li>
- <li>514&#128142;   -  720 Rs</li>
- <li>706&#128142;   -  980 Rs</li>
- <li>1050&#128142;  -  1440 Rs</li>
- <li>1412&#128142;  -  1920 Rs</li>
- <li>2195&#128142;  -  2760 Rs</li>
-</ul>
-
-
-<h3><u>Without Login Pack Alternate  Packs!(Via Id & Server)!</h3></u>
-
-<ul>
- <li>112&#128142;   -  170 Rs</li>
- <li>223&#128142;   -  325 Rs</li>
- <li>336&#128142;   -  475 Rs</li>
- <li>570&#128142;   -  790 Rs</li>
- <li>1163&#128142;  -  1550 Rs</li>
- <li>2398&#128142;  -  3150 Rs</li>
- <li>6042&#128142;  -  7700 Rs</li>
-</ul>
-
-
-<h3><u>Via Login Pack (Require Moonton/Facebook/VK)!</h3></u>
-
-<ul>
- <li>165&#128142;   -  230 Rs</li>
- <li>275&#128142;   -  390 Rs</li>
- <li>275&#128142;   -  400 Rs{180&#128302; Crystal Of Aurora}</li>
- <li>330&#128142;   -  480 Rs{200&#128302; Crystal Of Aurora}</li>
- <li>440&#128142;   -  600 Rs{180&#128302; Crystal Of Aurora}</li>
- <li>495&#128142;   -  690 Rs</li>
- <li>565&#128142;   -  750 Rs</li>
- <li>730&#128142;   -  950 Rs</li>
- <li>840&#128142;   -   1050 Rs</li>
- <li>1155&#128142;   -  1450 Rs</li>
- <li>1765&#128142;   -  2200 Rs</li>
- <li>2975&#128142;   -  3500 Rs</li>
- <li>6000&#128142;   -  6800 Rs</li>
-</ul>
-
-<u><p><b>Note :-</p></b></u>
-
-<ul>
- <li>Crystal Of Aurora Can Be Done Once In a Month</li>
-<li>Processing time 30 Minutes for first time recharge</li>
-<li>Will Be Instant If Already Played</li>
-</ul>
-
-<h3><u>Contact Us</h3></u>
-<p><a href="https://wa.me/+919999177742"> +919999177742 - Tap To Contact Hokage</a></p>
-<p><a href="https://wa.me/+917208593854"> +917208593854 - Tap To Contact Aero</a></p>
- 
-
-
- 
-
+<!DOCTYPE html>
+<html>
+<body>
+  <img src="banner.jpg" alt="Banner Image" width="100%" height="200">
+</body>
+</html>
